<resources>
    <string name="app_name">Submission2MADE</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
    <string name="movie">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="user_score">User Score :</string>
    <string name="release_date">Release Date :</string>
    <string name="top_cast">Top Cast :</string>
    <string name="description">Description</string>
    <string name="change_language">Change Language</string>
    <string-array name="data_title_movie">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed</item>
        <item>Deadpool</item>
        <item>How To Train Your Dragon</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_release_date_movie">
        <item>3 October 2018</item>
        <item>7 December 2018</item>
        <item>25 April 2018</item>
        <item>13 October 2018</item>
        <item>24 October 2018</item>
        <item>15 December 2018</item>
        <item>25 November 2018</item>
        <item>9 February 2018</item>
        <item>10 March 2010</item>
        <item>5 October 2018</item>
    </string-array>
    <string-array name="data_score_movie">
        <item>7.5</item>
        <item>6.8</item>
        <item>8.3</item>
        <item>7.0</item>
        <item>8.1</item>
        <item>6.5</item>
        <item>7.3</item>
        <item>7.6</item>
        <item>7.7</item>
        <item>6.6</item>
    </string-array>
    <string-array name="data_top_cast_movie">
        <item>Lady Gaga, Bradley Cooper, Sam Elliot, Andrew Dice Clay, Rafi Gavron</item>
        <item>Jason Momoa, Amber Heard, Willem Dafoe, Patrick Wilson, Nicole Kidman</item>
        <item>Robert Downey Jr., Chris Hemsworth, Chris Evans, Mark Ruffalo, Scarlett Johansson</item>
        <item>Sandra Bullock, Trevante Rhodes, John Malkovich, Sarah Paulson, Jacki Weaver</item>
        <item>Rami Malek, Gwilym Lee, Ben Hardy, Joseph Mazzello, Lucy Boynton</item>
        <item>Hailee Steinfeld, Joge Lendeborg Jr., John Cena, Jason Ian Drucker, Pamela Adlon</item>
        <item>Michael B. Jordan, Sylvester Stallone, Tessa Thompson, Phylicia Rashad, Tony Bellew</item>
        <item>Ryan Reynolds, Morena Baccarin, Ed Skrein, T.J. Miller, Gina Carano</item>
        <item>Jay Baruchel, Gerard Butler, Craig Ferguson, America Ferrera, Jonah Hill</item>
        <item>Tom Hardy, Michele Williams, Riz Ahmed, Scott Haze, Reid Scott</item>
    </string-array>
    <string-array name="data_description_movie">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just
            about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as
            Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an
            ongoing battle with his own internal demons.
        </item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the
            power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people
            and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother
            and true heir to the throne.
        </item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one
            hero to handle,
            a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to
            collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will
            on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and
            existence itself has never been more uncertain.
        </item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two
            children make a desperate bid to reach safety.
        </item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the
            music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant
            classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its
            greatest challenge yet – finding a way to keep the band together amid the success and excess.
        </item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town.
            Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee,
            battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.
        </item>
        <item>The former World Heavyweight Champion Rocky Balboa serves as a trainer and mentor to Adonis Johnson, the
            son of his late friend and former rival Apollo Creed.
        </item>
        <item>Deadpool tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after
            being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego
            Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who
            nearly destroyed his life.
        </item>
        <item>As the son of a Viking leader on the cusp of manhood, shy Hiccup Horrendous Haddock III faces a rite of
            passage: he must kill a dragon to prove his warrior mettle. But after downing a feared dragon, he realizes
            that he no longer wants to destroy it, and instead befriends the beast – which he names Toothless – much to
            the chagrin of his warrior father
        </item>
        <item>
            Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the
            host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to
            protect the world from a shadowy organization looking for a symbiote of their own.
        </item>

    </string-array>
    <string-array name="data_title_tv_show">
        <item>One Punch Man</item>
        <item>The Flash</item>
        <item>Arrow</item>
        <item>Grey\'s Anatomy</item>
        <item>Fear The Walking Dead</item>
        <item>The Simpsons</item>
        <item>Marvel\'s Agents Of S.H.I.E.L.D.</item>
        <item>Dragon Ball</item>
        <item>Game Of Thrones</item>
        <item>Gotham</item>
    </string-array>
    <string-array name="data_release_date_tv_show">
        <item>4 October 2015</item>
        <item>7 October 2014</item>
        <item>10 October 2012</item>
        <item>27 March 2005</item>
        <item>23 August 2015</item>
        <item>17 December 1989</item>
        <item>24 September 2013</item>
        <item>26 February 1986</item>
        <item>17 April 2011</item>
        <item>22 September 2014</item>
    </string-array>
    <string-array name="data_score_tv_show">
        <item>8.0</item>
        <item>6.7</item>
        <item>5.8</item>
        <item>6.2</item>
        <item>6.3</item>
        <item>7.1</item>
        <item>6.8</item>
        <item>7.1</item>
        <item>8.1</item>
        <item>6.9</item>
    </string-array>
    <string-array name="data_top_cast_tv_show">
        <item>Makoto Furukawa, Kaito Ishikawa, Hiraku M., Kazuhiro Yamaji, Yuichi Nakamura</item>
        <item>Grant Gustin, Candice Patton, Carlos Valdes, Danielle Panabeker, Tom Cavanagh</item>
        <item>Stephen Amell, Emily Bett R., David Ramsey, Katie Cassidy, Willa Holland</item>
        <item>Ellen Pompeo, Justin Chambers, James Pickens Jr., Chandra Wilson, Patrick Dempsey</item>
        <item>Alicia Debnam-Carey, Colman Domingo, Kim Dickens, Frank Dillane, Ruben Blades</item>
        <item>Dan Castellaneta, Julie Kavner, Nancy Cartwright, Yeardley Smith, Harry Shearer</item>
        <item>Chloe Bennet, Clark Gregg, Ming-Na Wen, Iain De Caestecker, Elizabeth Henstridge</item>
        <item>Masako Nozawa, Mayumi Tanaka, Hiromi Tsuru, Toru Furuya, Naoki Tatsuta</item>
        <item>Emilia Clarke, Kit Harington, Peter Dinklage, Lena Headey, Nikolaj Coster-Waldau</item>
        <item>Ben McKenzie, Donal Logue, David Mazouz, Sean Pertwee, Robin Lord Taylor</item>
    </string-array>
</resources>